Fix locations on Declarations in macro expansions

The issue occurs when using Google-Test. Whenever you hovered over
Assertion-Macro parameters the whole macro up-to the closing
parenthesis was highlighted and referenced class testing::Message.

Adapts to clang-19 SpellingLocation change

llvm commit:
https://github.com/llvm/llvm-project/commit/2e770edd8ce13f48402f1d93e5fb982d8a2ebe64
  [libclang] Compute the right spelling location (#72400)

BUG: 496985
FIXED-IN: 6.1.241202
(cherry picked from commit 458ab3e61975c0ca49fbbab23b3178a439ce8414)